# centy-daemon

./: .ai-fs-permissions.yaml  .file-size-allowlist  .gitignore  .gitmodules  .lintstagedrc.mjs  .mcp.json  .tarpaulin.toml  .worktree.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Roadmap.md  architecture.mmd  build.rs  cspell.json  linecheck.yml  package.json  pnpm-lock.yaml  test_move_match
.cargo-husky/hooks/: pre-commit  pre-push
.centy/: .centy-manifest.json  README.md  config.json  cspell.json  llm-work.json  users.json
.centy/comments/: config.yaml
.centy/docs/: agent-manager.md  config.yaml  daemon-architecture.md  item-agnostic-migration.md  kafka-integration-brainstorm.md  lib-extraction.md  mdstore-extraction.md  org-wide-centy-repo.md  workspace-hooks-brainstorm.md
.centy/epics/: 31b1cc61-a702-421c-a102-a555ff8e219d.md  33e6bdde-5a96-4b86-8ab1-71a214288a56.md  353129a8-aa4c-4f5d-9462-87b8f75246d0.md  48ac4f78-057c-4ff5-abd9-137105a6e560.md  859840e4-3c6d-4923-b5de-0119991d4d8f.md  9d34bd9d-a96c-435f-941f-18a45379ecea.md  b1b74e2b-0c99-4f94-9b45-3b50949f7bb7.md  b3441a98-1d88-442f-baad-b6c0ee4eef17.md  b406d719-dd99-4460-9b55-7138dc36cb79.md  c3d569eb-df40-4474-be4e-5fd64434c385.md  config.yaml  eb8497fc-cc91-4491-8dcd-fa11669cf1cb.md  f4a4883b-f462-468a-9cb6-e05bb1965677.md  f7d0f8a7-f516-437a-a800-1ceb40631caa.md  f9ede1e8-29eb-47d3-bb49-0e701e08df5b.md
.centy/ideas/: config.yaml  plugin-system-user-defined-plugins-with-run-once-tracking.md
.centy/issues/: 0001.md  0002.md  0003.md  0004.md  0005.md  00058052-5264-4e66-a619-b473bd43b64d.md  002e291f-210a-4c27-9b25-bc09fb549bdc.md  00615965-f69a-454c-8e99-482eedefda89.md  010c3029-ee7e-43bf-abf8-c87bc58fa169.md  01520de6-16fc-4256-ad18-f46b59da3c79.md  01794ac0-d4d3-4dfd-a2c6-2a66c6ace5b3.md  01b4f8f8-9907-443a-847d-0d8000d58d50.md  0237c1be-21c1-49b1-b7e2-5fcb879f3e0d.md  023e65a7-ca36-45cb-afa5-373d59540dea.md  0285616b-34f9-47ba-8bc3-3adc25323eed.md  04f7f984-aac7-4ba4-aa6a-996b308615d8.md  04ff5a0a-fea8-4689-97eb-0b88d9497991.md  052a3fee-be9f-4b9c-a4ba-a62bfc5a3fb2.md  054edd97-d58c-46f4-b692-849739d0dfdf.md  0623bf91-e5d1-430a-ae11-d62bb3f066a4.md  066b678a-164c-4a34-bbf2-e8371a2cf4be.md  07bb89b8-77c1-47c2-bd04-fcf0aeae78fe.md  09bb78cf-dbff-4520-bd1f-35cf1876e3c6.md  0ab75bcd-941e-460a-ac32-185e417db1ae.md  0af02b95-f13b-418f-822b-b0531069634f.md  0b02cb8b-5291-4e61-9d23-5323d226d8e5.md  0b9d64fd-ac27-48ef-b7c8-95484b1d5da6.md  0cf3d67d-05da-4115-a6ce-788f9b503145.md  0dac5a2b-b1a9-459f-89b4-679f87489a3e.md  0f1ed585-3246-4d2f-bfb7-a026164bf68d.md  0f2dce0a-76b8-417e-9069-e2c4f05c145b.md  0f2fca10-a438-4656-9d47-78a57ff95215.md  0ff02481-dd7d-47cb-94e3-1f6d6e59ef68.md  12423eab-0f2b-47e7-aa0e-0f3a2b9d1317.md  125ffd74-94ef-476a-bf88-acd5fdf6d9ef.md  13e3574c-1b1f-4191-986d-f5476414962c.md  1568f4f9-5884-4282-b85a-aff826e49daf.md  15ba2c7c-1e7d-4137-926e-d215a5f7d79b.md  160b0908-1100-487a-8511-0620d14c757e.md  1626ce6f-c779-4bc3-895d-5c4cbf08bba6.md  (+373 more)
.centy/links/: 0237c6e4-0395-4504-99e4-0ea9e78edfc1.md  033a6bf8-f817-4e2f-a2b3-6e02181fc5c8.md  043e328a-2eb7-4033-bf34-662224573958.md  10f9f071-7dc1-4e1c-8147-c71f45bcf64d.md  17ffcba2-c232-4805-a7be-3780688430f3.md  195eaf86-3718-45df-8077-2920dac1fdc5.md  1a3b5477-4caa-4ef2-a48a-68fc79e5d0b9.md  1fbd0fa8-bf86-4571-823d-f2dabe88e712.md  249ead2e-26cd-4d62-8fdd-61540f91aa47.md  26829a0e-c924-419b-9302-5f0e3f8ad1e5.md  2fd94c0c-9fc7-4dcc-aceb-31bf5071a4c4.md  2ff10d7f-2e59-4d1b-87dd-5b1f442a329f.md  3a9daf61-7090-464d-8549-3c36a65b2020.md  3b38108e-71ff-4ae7-b757-c8019695fd32.md  49147af2-2cb7-4ded-91b7-6dd15188ef51.md  4dc81506-b991-4bd5-bb0b-1feed0243fef.md  4f1993a4-7383-4079-8abb-6c4725ac86e3.md  52312309-727a-4fc9-86e6-704aba76df18.md  54e76c30-1155-4540-9a3a-ca1ed04416d4.md  57762006-8759-4e8c-8581-801a9a2ed0ff.md  5fe91d76-4168-47e6-8058-fc65c368c645.md  60c5bd9e-8254-4cb3-a542-6cff16a106bb.md  611c53c3-454e-4c7f-88d7-0bf30f78ab7c.md  6619452f-f8c3-4afe-9f14-6fce17d830be.md  6831cf9d-8c63-4e3a-b342-eceff6f3d1f4.md  691c3af9-fe29-4e57-9a74-673b002407f8.md  6a422087-6478-45b3-9262-5723ea673001.md  6c10aeb0-a153-4ef6-8b3b-b78c29cc2e89.md  6ccdac05-dd3d-43ae-abf3-81380dfdb2f2.md  70607842-b37a-4c11-ba9a-eefd0525afdd.md  774a03fe-8481-495e-93a2-54b3feecd246.md  7a7bafb4-f813-4698-9f36-cc5665a3bdc4.md  843dea15-9213-4abd-9bcf-baaefbe05d15.md  8511c340-14f3-462a-9aa3-74b612115a45.md  89fd43ee-199d-40bd-96bf-76fd4cc4fc17.md  8c590f85-8173-44c0-8a60-dfa75c5ca2dd.md  91442e8e-b9f7-4aff-8a7a-45a14bedb522.md  919dc473-9ff4-4742-81ca-e516c8bb0c0a.md  (+26 more)
.claude/: cspell.json  ralph-loop.local.md  settings.json
.claude-plugin/: README.md  marketplace.json
.husky/: pre-commit  pre-push
cli/: .gitignore  CHANGELOG.md  Makefile  README.md  buf.gen.yaml  cspell.json  go.mod  go.sum  main.go
daemon/: Cargo.toml  Dockerfile  build.rs
e2e/: Dockerfile  cli-snapshot.e2e.spec.ts  config.e2e.spec.ts  daemon.e2e.spec.ts  docker-compose.yml  docs.e2e.spec.ts  generic-items.e2e.spec.ts  init.e2e.spec.ts  issues.e2e.spec.ts  links.e2e.spec.ts  org-issue-sync.e2e.spec.ts  org-issues.e2e.spec.ts  package.json  prs.e2e.spec.ts  users.e2e.spec.ts
mcp/: .gitignore  CHANGELOG.md  Makefile  README.md  buf.gen.yaml  cspell.json  daemon_spawn_unix.go  daemon_spawn_windows.go  go.mod  go.sum  main.go
proto/: centy.proto
scripts/: check-file-size.sh  coverage.sh
src/: app.rs  cors.rs  github_releases.rs  github_releases_tests.rs  grpc_logging.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  metrics.rs  run.rs  user_config.rs  user_config_tests.rs
tests/: asset_test.rs  create_item_type_test.rs  doc_test.rs  generic_rpc_test.rs  generic_storage_test.rs  get_item_org_fallback_test.rs  hooks_test.rs  init_test.rs  issue_test.rs  item_type_config_migration_test.rs  link_test.rs  list_item_types_test.rs  org_inference_test.rs  pr_test.rs  registry_org_test.rs  registry_test.rs  server_test.rs  template_test.rs  update_delete_item_org_fallback_test.rs  user_crud_test.rs
worktree-io-patch/: Cargo.toml
xtask/: Cargo.toml
(+1320 files in other folders)
