[package]
name = "centy-daemon"
version = "0.8.1"
edition = "2021"
description = "A file-based database engine that stores structured data as Markdown files with YAML frontmatter, exposed via gRPC"
authors = ["Centy Team"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
# Git worktree workspace management
worktree-io = "0.15.0"

# Storage engine
mdstore = "1.0.0"

# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"

# HTTP/CORS/Tower
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Frontmatter parsing
gray_matter = "0.3"

# Cryptography (for SHA-256)
sha2 = "0.10"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"

# File system utilities
walkdir = "2"
replace-homedir = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"
color-eyre = "0.6"
tracing-error = "0.2"

# TOML parsing (for user config)
toml = "0.8"

# Template engine
handlebars = "6"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Semantic versioning
semver = { version = "1", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = "0.2"

# Home directory detection
dirs = "5"

# Async traits and lazy statics
async-trait = "0.1"
once_cell = "1"

# Regex for validation
regex = "1"

# Async utilities
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Command existence checking
which = "6"

# Shell escaping for command construction
shell-escape = "0.1"
slug = "0.1.6"


[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = [
    "precommit-hook",
    "prepush-hook",
    "user-hooks",
] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Enable pedantic lints
pedantic = { level = "warn", priority = -1 }

# Deny panic/unwrap/expect to enforce proper error handling
# These lints prevent runtime panics in favor of explicit error handling
# Test code is exempted via cfg_attr(test, allow(...)) in lib.rs and main.rs
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
exit = "deny"

# Deny unvalidated arithmetic to prevent overflow panics in debug
# and silent wrapping in release builds
arithmetic_side_effects = "deny"

# Deny direct indexing/slicing to prevent index-out-of-bounds panics
# Use safe alternatives like .get(), .first(), .split_at() which return Option
indexing_slicing = "deny"
# Deny string slicing to prevent panics on non-UTF-8 character boundaries
string_slice = "deny"

# Warn on long functions - enforces refactoring into smaller functions
too_many_lines = "deny"

# Prefer map_or/map_or_else/is_some_and/is_none_or over map().unwrap_or()
map_unwrap_or = "deny"

# Allow noisy pedantic lints
missing_errors_doc = "allow"
result_large_err = "allow"
unnecessary_wraps = "allow"
must_use_candidate = "deny"
doc_markdown = "deny"
similar_names = "deny"
module_name_repetitions = "allow"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
struct_excessive_bools = "deny"
single_match_else = "deny"
unused_self = "deny"
needless_pass_by_value = "deny"
items_after_statements = "deny"
match_same_arms = "deny"
wildcard_imports = "deny"
return_self_not_must_use = "deny"
format_push_string = "deny"
wrong_self_convention = "deny"
too_many_arguments = "allow"
enum_variant_names = "deny"
assigning_clones = "deny"
missing_panics_doc = "deny"
default_trait_access = "deny"
const_is_empty = "deny"
manual_let_else = "deny"
unused_async = "deny"
struct_field_names = "deny"
trivially_copy_pass_by_ref = "deny"
if_then_some_else_none = "deny"
or_fun_call = "deny"
redundant_closure_for_method_calls = "deny"
map_flatten = "deny"
needless_bitwise_bool = "deny"
filter_map_next = "deny"
cloned_instead_of_copied = "deny"
flat_map_option = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
needless_continue = "deny"
needless_pass_by_ref_mut = "deny"
from_iter_instead_of_collect = "deny"
implicit_clone = "deny"
range_plus_one = "deny"
semicolon_if_nothing_returned = "deny"
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"
large_stack_arrays = "deny"
match_wildcard_for_single_variants = "deny"
needless_raw_string_hashes = "deny"
string_add_assign = "deny"
zero_sized_map_values = "deny"
naive_bytecount = "deny"
checked_conversions = "deny"
verbose_bit_mask = "deny"
unnested_or_patterns = "deny"
cast_lossless = "deny"
ptr_as_ptr = "deny"
ref_binding_to_reference = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
into_iter_without_iter = "deny"
iter_without_into_iter = "deny"
lossy_float_literal = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
linkedlist = "deny"
negative_feature_names = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
trait_duplication_in_bounds = "deny"
type_repetition_in_bounds = "deny"
manual_string_new = "deny"
collapsible_else_if = "deny"
collapsible_if = "deny"
partial_pub_fields = "deny"
pub_without_shorthand = "deny"
blanket_clippy_restriction_lints = "deny"
redundant_type_annotations = "deny"
error_impl_error = "deny"
deref_by_slicing = "deny"
format_collect = "deny"
if_not_else = "deny"
redundant_else = "deny"
string_lit_chars_any = "deny"
try_err = "deny"
mutex_atomic = "deny"
multiple_inherent_impl = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
unreachable = "deny"
verbose_file_reads = "deny"
non_ascii_literal = "deny"
renamed_function_params = "deny"
dbg_macro = "deny"
use_debug = "deny"
todo = "deny"
integer_division = "deny"
fn_to_numeric_cast_any = "deny"
missing_assert_message = "deny"
multiple_unsafe_ops_per_block = "deny"
print_stdout = "deny"
manual_is_ascii_check = "deny"
suspicious_xor_used_as_pow = "deny"
manual_flatten = "deny"
path_buf_push_overwrite = "deny"
large_futures = "deny"
used_underscore_binding = "deny"
from_str_radix_10 = "deny"
missing_fields_in_debug = "deny"
manual_next_back = "deny"
separated_literal_suffix = "deny"
large_include_file = "deny"
float_arithmetic = "deny"
future_not_send = "deny"
items_after_test_module = "deny"
mixed_read_write_in_expression = "deny"
modulo_arithmetic = "deny"
mutex_integer = "deny"
no_effect_underscore_binding = "deny"
should_panic_without_expect = "deny"
match_bool = "deny"
option_option = "deny"
nonstandard_macro_braces = "deny"
trivial_regex = "deny"
expl_impl_clone_on_copy = "deny"
significant_drop_tightening = "deny"
iter_not_returning_iterator = "deny"
read_zero_byte_vec = "deny"
only_used_in_recursion = "deny"
branches_sharing_code = "deny"
empty_drop = "deny"
ref_option = "deny"
ref_option_ref = "deny"
str_split_at_newline = "deny"
suboptimal_flops = "deny"
unused_peekable = "deny"
unnecessary_self_imports = "deny"
unnecessary_struct_initialization = "deny"
unused_rounding = "deny"
wildcard_in_or_patterns = "deny"
zombie_processes = "deny"
fallible_impl_from = "deny"
regex_creation_in_loops = "deny"
debug_assert_with_mut_call = "deny"
set_contains_or_insert = "deny"
needless_borrowed_reference = "deny"
expect_fun_call = "deny"
extend_with_drain = "deny"
collection_is_never_read = "deny"
or_then_unwrap = "deny"
io_other_error = "deny"
manual_midpoint = "deny"
empty_enum_variants_with_brackets = "deny"
match_wild_err_arm = "deny"
fn_params_excessive_bools = "deny"
disallowed_script_idents = "deny"
default_union_representation = "deny"
as_underscore = "deny"
large_digit_groups = "deny"
suspicious_doc_comments = "deny"
unnecessary_safety_comment = "deny"
pub_underscore_fields = "deny"
incompatible_msrv = "deny"
manual_c_str_literals = "deny"
manual_is_variant_and = "deny"
manual_rotate = "deny"
option_as_ref_cloned = "deny"
unnecessary_map_on_constructor = "deny"
unnecessary_get_then_check = "deny"
doc_lazy_continuation = "deny"
no_effect_replace = "deny"
manual_abs_diff = "deny"
sliced_string_as_bytes = "deny"
unnecessary_clippy_cfg = "deny"
manual_div_ceil = "deny"
precedence_extra_parens = "deny"

[[bin]]
name = "centy-daemon"
path = "src/main.rs"

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/tupe12334/agent_dylint_lints" },
]

# Debian package metadata (used by cargo-deb)
[package.metadata.deb]
maintainer = "Centy Team"
copyright = "2024 Centy Team"
license-file = ["LICENSE", "0"]
extended-description = """
Centy Daemon is a file-based database engine that stores structured data as Markdown files with YAML frontmatter.
It provides a gRPC API for CRUD operations, advanced search, entity linking, and multi-project management.
"""
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/centy-daemon",
        "usr/bin/",
        "755",
    ],
    [
        "packaging/linux/systemd/centy-daemon.service",
        "lib/systemd/system/",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/centy-daemon/",
        "644",
    ],
]

# RPM package metadata (used by cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/centy-daemon", dest = "/usr/bin/centy-daemon", mode = "755" },
    { source = "packaging/linux/systemd/centy-daemon.service", dest = "/lib/systemd/system/centy-daemon.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/centy-daemon/README.md", mode = "644", doc = true },
]
